<resources>
    <string name="app_name">TProger</string>

    <string name="hello_world">Hello world!</string>
    <string name="title">Заголовок</string>
    <string name="download">Загрузить</string>
    <string name="close">Закрыть</string>
    <string name="share">Поделиться</string>
    <string name="about">О приложении</string>
    <string name="action_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="design">Внешний вид</string>
    <string name="night_mode">Ночной режим</string>
    <string name="list_style">Списки сеткой</string>

    <string name="eclipseFilter">tag:^(?!TelephonyManager) tag:^(?!charger_monitor) tag:^(?!WeatherReflect) tag:^(?!PowerManagerService) tag:^(?!WifiController) tag:^(?!qazwsx) tag:^(?!NotificationServiceEx) tag:^(?!KeyguardUpdateMonitor) tag:^(?!WifiManager) tag:^(?!VideoCapabilities) tag:^(?!AudioFlinger) tag:^(?!qdlights) tag:^(?!LEDHandler) tag:^(?![SystemUI]LGPowerUI) tag:^(?!WeatherTheme) tag:^(?!linker) tag:^(?!System.out) tag:^(?!sensors_hal_Time) tag:^(?!SwipeRefreshLayout) tag:^(?!LGMtpServerJNI) tag:^(?!PhoneWindow) tag:^(?!ContextHelper) tag:^(?!NotificationManager) tag:^(?!BindingManager) tag:^(?!AwContents) tag:^(?!TouchFlickNoti) tag:^(?!skia) tag:^(?!VelocityTracker) tag:^(?!SurfaceTextureClient) tag:^(?!GraphicBuffer) tag:^(?!InputMethodManager) tag:^(?!AbsListView) tag:^(?!AudioSystemEx) tag:^(?!MediaRecorderEx) tag:^(?!Adreno-EGL) tag:^(?!LGMtpDatabaseJNI) tag:^(?!MediaProfilesEx-JNI) tag:^(?!Atlas) tag:^(?!SurfaceControlEx) tag:^(?!MediaPlayerEx-jni) tag:^(?!BubblePopupHelper) tag:^(?!dalvikvm) tag:^(?!libEGL) tag:^(?!Open) tag:^(?!Google) tag:^(?!resour) tag:^(?!Chore) tag:^(?!EGL) tag:^(?!SocketStream) tag:^(?!WifiStateMachine) tag:^(?!chromium) tag:^(?!audio_hw_primary) tag:^(?!InputEventReceiver) tag:^(?!ActivityManager) tag:^(?!AudioManagerAndroid) tag:^(?!LibraryLoader) tag:^(?!WebViewFactory) tag:^(?!JavaBinder) tag:^(?!art) tag:^(?!ViewRootImpl) tag:^(?!InputMethodManagerService) tag:^(?!ACDB-LOADER) tag:^(?!WindowManager) tag:^(?!WebViewChromiumFactoryProvider) tag:^(?!GCM) tag:^(?!CalendarProvider2) tag:^(?!View) tag:^(?!libc-netbsd) tag:^(?!Timeline) tag:^(?!CliptrayUtils) tag:^(?!BrowserStartupController)</string>
    <string name="export_db">Экспорт БД</string>
    <string name="recreate_db">Пересоздать БД</string>
    <string name="db_delete_last_art_cat">Удалить последнюю ArtCat</string>
    <string name="db_delete_table_articles">Удалить таблицу Articles</string>
    <string name="title_activity_article">Статьи</string>
    <string name="title_activity_cats_and_tags">Категории и темы</string>
    <string name="db_delete_first_artcat_in_category">Удалить первую статью в категории</string>
    <string name="show">Смотреть</string>
    <string name="copy">Копировать</string>

    <string name="fresh">Свежее</string>
    <string name="cats_and_themes">Категории и темы</string>
    <string name="downloaded_arts">Загруженные статьи</string>
    <string name="pref_header_notifications_summary_off_on">Уведомления</string>
    <string name="off">Выкл</string>
    <string name="on">Вкл</string>
    <string name="pref_notifications_key_period">pref_notifications_key_period</string>
    <string name="receiver_timer_action">ru.kuchanov.tproger.RECEIVER_TIMER_ACTION</string>
    <string name="notif_new_arts_big_content_title">Новые статьи:</string>

    <string-array name="drawer_items">
        <item>@string/fresh</item>
        <item>@string/cats_and_themes</item>
        <item>@string/downloaded_arts</item>
        <item>@string/settings</item>
    </string-array>

</resources>
