<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="?settingsIcon"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <group
        android:id="@+id/night_mode"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/night_mode_switcher"
            android:icon="?nightModeIcon"
            android:orderInCategory="220"
            android:title="@string/night_mode"
            app:showAsAction="never"/>
    </group>

    <item
    android:id="@+id/db_export"
    android:orderInCategory="1000"
    android:title="@string/export_db"
    app:showAsAction="never"/>

    <item
        android:id="@+id/db_recreate"
        android:orderInCategory="1100"
        android:title="@string/recreate_db"
        app:showAsAction="never"/>

    <item
        android:id="@+id/db_delete_last_art_cat"
        android:orderInCategory="1200"
        android:title="@string/db_delete_last_art_cat"
        app:showAsAction="never"/>
</menu>
